syntax = "proto3";

package notification;

message NotificationRequest {
  string task_id = 1;
  string task_title = 2;
  string task_description = 3;
  string user_id = 4;
  string user_email = 5;
  string action = 6;
}

service NotificationService {
  rpc SendNotification(NotificationRequest) returns (NotificationResponse);
}

message NotificationResponse {
  bool success = 1;
  string message = 2;
}
